--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
@@ -11,7 +12,7 @@
         <div class="menu">
             <nav>
                 <div class="header_logo"><img src="img/logo.png" alt="MedLogo"></div>
-                <ul>
+                <ul class="menu_items">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Blog</a></li>
@@ -21,6 +22,7 @@
                     <a href="#">Sign In</a>
                     <button class="button">Sign Up</button>
                 </div>
+                <img src="img/menu.svg" alt="menu" class="menu1">
             </nav>
         </div>
     </header>
